Update java version