@@ -2,18 +2,10 @@ FROM alpine:3.12.0
 
 ENV LANG C.UTF-8
 
-RUN { \
-		echo '#!/bin/sh'; \
-		echo 'set -e'; \
-		echo; \
-		echo 'dirname "$(dirname "$(readlink -f "$(which javac || which java)")")"'; \
-	} > /usr/local/bin/docker-java-home \
-	&& chmod +x /usr/local/bin/docker-java-home
+ENV JAVA_HOME /usr/lib/jvm/java-11-openjdk/jre
+ENV PATH $PATH:/usr/lib/jvm/java-11-openjdk/jre/bin:/usr/lib/jvm/java-11-openjdk/bin
 
-ENV JAVA_HOME /usr/lib/jvm/java-1.8-openjdk/jre
-ENV PATH $PATH:/usr/lib/jvm/java-1.8-openjdk/jre/bin:/usr/lib/jvm/java-1.8-openjdk/bin
-
-ENV JAVA_ALPINE_VERSION 8.242.08-r2
+ENV JAVA_ALPINE_VERSION openjdk11-jre=11.0.7_p10-r1
 
 ONBUILD ARG BUILD_DATE
 ONBUILD ARG BUILD_VERSION="-"
@@ -23,7 +15,7 @@ LABEL org.opencontainers.image.authors="central.the1.engineering@gmail.com" \
       org.opencontainers.image.created=$BUILD_DATE \
       org.opencontainers.image.source=$BUILD_VERSION
 
-ENV JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2
+ENV JAVA_OPTS -XX:MaxRAMPercentage=70
 ENV VM_OPTS ""
 ONBUILD ENV BUILD_VERSION=$BUILD_VERSION
 ONBUILD ENV BUILD_DATE=$BUILD_DATE
@@ -32,8 +24,7 @@ ONBUILD ENV VERSION=$VERSION
 RUN apk --no-cache upgrade && \
     apk add --no-cache ca-certificates && \
     set -x && \
-    apk --no-cache add curl bash openjdk8-jre="$JAVA_ALPINE_VERSION" && \
-    [ "$JAVA_HOME" = $(docker-java-home) ]  && \
+    apk --no-cache add curl bash "$JAVA_ALPINE_VERSION" && \
 		rm -rf /var/cache/apt/*
 
 
